[package]
name = "alphamissense_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", default-features = false, features = ["json"] }
rocket_cors = "0.6.0-alpha2"
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
rocket_okapi = { version="0.8.0-rc.3", features = ["swagger", "rapidoc", "rocket_db_pools"] }
serde = "1.0"
sqlx = { version = "0.6", default-features = false, features = ["postgres", "macros", "bigdecimal", "offline"] }
