[package]
name = "alphamissense_web"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
aws-config = { version = "1.8.8", default-features = false, features = ["rt-tokio", "behavior-version-latest"]}
aws-credential-types = { version = "1.2.8", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.108.0"
axum = { version = "0.8.6", features = ["macros"] }
bstr = "1.12.1"
csv = "1.4.0"
dotenvy = "0.15.7"
http = "1.3.1"
noodles = { version = "0.101.0", features = ["bgzf", "core", "csi", "tabix"] }
serde = "1.0"
tower-service = "0.3.3"
worker = { version = "0.6.7", features = ["axum", "http"] }

