[package]
name = "alphamissense_web"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bstr = "1.12.1"
csv = "1.4.0"
dotenvy = "0.15.7"
http = "1.3.1"
noodles = { version = "0.101.0", features = ["bgzf", "core", "csi", "tabix"] }
serde = "1.0"
tower-service = "0.3.3"
worker = { version = "0.6.7", features = ["axum", "http"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt"] }
tracing = "0.1.41"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.20", features = ["json", "time"] }
time = { version = "0.3.44", features = ["wasm-bindgen"] }
rapidhash = "4.1.1"

[lib]
crate-type = ["cdylib"]


